[project]
name = "optocombtoolkit-stage-documentations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "htmlark[http,parsers]>=1.0.0",
    "markdown>=3.8.2",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-print-site-plugin>=2.8",
    "mkdocs-static-i18n>=1.3.0",
    "pymdown-extensions>=10.16.1",
]
